Bug 1399652 - Add more IPCOpen() checks to WebRenderBridgeChild r=kats