gfx/layers/wr/WebRenderLayerManager.cpp
@@ -967,7 +967,8 @@ WebRenderLayerManager::AddCompositorAnimationsIdForDiscard(uint64_t aId)
 void
 WebRenderLayerManager::DiscardCompositorAnimations()
 {
-  if (WrBridge()->IPCOpen() && !mDiscardedCompositorAnimationsIds.IsEmpty()) {
+  if (WrBridge()->IPCOpen() &&
+      !mDiscardedCompositorAnimationsIds.IsEmpty()) {
     WrBridge()->
       SendDeleteCompositorAnimations(mDiscardedCompositorAnimationsIds);
   }
